<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/user_and_more_selector_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/dialog_standard_title_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="12dp" >

        <TextView
            android:id="@+id/dialog_standard_title"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/dialog_title"
            android:textColor="@color/text_black"
            android:textSize="@dimen/textSize14" />
    </RelativeLayout>

    <View
        android:id="@+id/dialog_standard_title_div"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/divide_line_bg" />

    <RelativeLayout
        android:id="@+id/dialog_standard_act_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <View
            android:id="@+id/dialog_standard_act_div"
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:background="@color/divide_line_bg" />

        <TextView
            android:id="@+id/dialog_standard_cancel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/dialog_standard_act_div"
            android:background="@color/user_and_more_selector_bg"
            android:text="@string/txt_cancel"
            android:textColor="@color/text_black"
            android:textSize="13dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/dialog_standard_sure"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@id/dialog_standard_act_div"
            android:background="@color/user_and_more_selector_bg"
            android:text="@string/txt_sure"
            android:textColor="@color/text_black"
            android:textSize="13dp"
            android:gravity="center" />
    </RelativeLayout>

</LinearLayout>