<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/user_and_more_selector_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/dialog_hint_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:padding="10dp" >

        <TextView
            android:id="@+id/dialog_hint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/dialog_title"
            android:textColor="@color/text_black"
            android:textSize="@dimen/textSize12" />

        <TextView
            android:id="@+id/dialog_hint_extra"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_hint"
            android:ellipsize="end"
            android:maxLines="2"
            android:gravity="center_vertical"
            android:text="@string/dialog_title"
            android:textColor="@color/text_black"
            android:textSize="@dimen/textSize12" />
    </RelativeLayout>
<!-- android:singleLine="false" 
android:layout_marginTop="@dimen/dialog_margin"-->
    <View
        android:id="@+id/dialog_hint_div"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/divide_line_bg" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:focusable="true"
        android:focusableInTouchMode="true" >
        <View
            android:id="@+id/dialog_standard_act_div"
            android:layout_width="1px"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:background="@color/divide_line_bg" />
        <TextView
            android:id="@+id/dialog_hint_close"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@id/dialog_standard_act_div"
            android:background="@color/user_and_more_selector_bg"
            android:gravity="center"
            android:text="@string/txt_cancel"
            android:textColor="@color/text_black"
            android:textSize="@dimen/textSize13" />
        <TextView
            android:id="@+id/dialog_hint_sure"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
             android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@id/dialog_standard_act_div"
            android:background="@color/user_and_more_selector_bg"
            android:gravity="center"
            android:text="@string/txt_sure"
            android:textColor="@color/text_black"
            android:textSize="@dimen/textSize13" />
    </RelativeLayout>

</LinearLayout>